docs/4.6.0/_sources/autoapi/trieste/space/index.rst.txt
trieste.space
=============

.. py:module:: trieste.space

.. autoapi-nested-parse::

   This module contains implementations of various types of search space.











Module Contents
---------------

.. py:data:: SearchSpaceType

   A type variable bound to :class:`SearchSpace`. 


.. py:data:: DEFAULT_DTYPE
   :type:  tensorflow.DType

   Default dtype to use when none is provided. 


.. py:data:: EncoderFunction

   Type alias for point encoders. These transform points from one search space to another. 


.. py:exception:: SampleTimeoutError

   Bases: :py:obj:`Exception`


   Raised when sampling from a search space has timed out.

   Initialize self.  See help(type(self)) for accurate signature.


.. py:class:: NonlinearConstraint(fun: Callable[[trieste.types.TensorType], trieste.types.TensorType], lb: Sequence[float] | trieste.types.TensorType, ub: Sequence[float] | trieste.types.TensorType, keep_feasible: bool = False)

   Bases: :py:obj:`scipy.optimize.NonlinearConstraint`


   A wrapper class for nonlinear constraints on variables. The constraints expression is of the
   form::

       lb <= fun(x) <= ub

   :param fun: The function defining the nonlinear constraints; with input shape [..., D] and
       output shape [..., 1], returning a scalar value for each input point.
   :param lb: The lower bound of the constraint. Should be a scalar or of shape [1].
   :param ub: The upper bound of the constraint. Should be a scalar or of shape [1].
   :param keep_feasible: Keep the constraints feasible throughout optimization iterations if this
       is `True`.


   .. py:method:: residual(points: trieste.types.TensorType) -> trieste.types.TensorType

      Calculate the residuals between the constraint function and its lower/upper limits.

      :param points: The points to calculate the residuals for, with shape [..., D].
      :return: A tensor containing the lower and upper residual values with shape [..., 2].



   .. py:method:: __eq__(other: object) -> bool

      :param other: A constraint.
      :return: Whether the constraint is identical to this one.



.. py:class:: LinearConstraint(A: trieste.types.TensorType, lb: Sequence[float] | trieste.types.TensorType, ub: Sequence[float] | trieste.types.TensorType, keep_feasible: bool = False)

   Bases: :py:obj:`scipy.optimize.LinearConstraint`


   A wrapper class for linear constraints on variables. The constraints expression is of the form::

       lb <= A @ x <= ub

   :param A: The matrix defining the linear constraints with shape [M, D], where M is the
       number of constraints.
   :param lb: The lower bound of the constraint. Should be a scalar or of shape [M].
   :param ub: The upper bound of the constraint. Should be a scalar or of shape [M].
   :param keep_feasible: Keep the constraints feasible throughout optimization iterations if this
       is `True`.


   .. py:method:: residual(points: trieste.types.TensorType) -> trieste.types.TensorType

      Calculate the residuals between the constraint function and its lower/upper limits.

      :param points: The points to calculate the residuals for, with shape [..., D].
      :return: A tensor containing the lower and upper residual values with shape [..., M*2].



   .. py:method:: __eq__(other: object) -> bool

      :param other: A constraint.
      :return: Whether the constraint is identical to this one.



.. py:data:: Constraint

   Type alias for constraints. 


.. py:function:: _embed_constraint(constraint: Constraint, offset: int, part_dim: int, combined_dim: int) -> Constraint

   Re-express a constraint defined on a ``part_dim``-wide sub-vector so it applies to a wider
   ``combined_dim``-wide flat vector, with the sub-vector occupying columns
   ``[offset, offset + part_dim)`` and all other columns ignored.

   Used to carry a search space's (positional) constraints through a Cartesian product, where the
   space's columns are relocated to a contiguous block of the combined flat vector.

   :param constraint: A :class:`LinearConstraint` or :class:`NonlinearConstraint` over the
       ``part_dim``-wide sub-vector.
   :param offset: Index of the sub-vector's first column in the combined vector.
   :param part_dim: Width of the sub-vector the constraint was defined on.
   :param combined_dim: Width of the combined vector.
   :return: An equivalent constraint over the combined vector.
   :raises NotImplementedError: For an unsupported constraint type.


.. py:class:: SearchSpace

   Bases: :py:obj:`abc.ABC`


   A :class:`SearchSpace` represents the domain over which an objective function is optimized.


   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType
      :abstractmethod:


      :param num_samples: The number of points to sample from this search space.
      :param seed: Random seed for reproducibility.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly from this search space.



   .. py:method:: contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      Method for checking membership.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.
      :raise ValueError (or tf.errors.InvalidArgumentError): If ``value`` has a different
          dimensionality points from this :class:`SearchSpace`.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType
      :abstractmethod:


      Space-specific implementation of membership. Can assume valid input shape.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.



   .. py:method:: __contains__(value: trieste.types.TensorType) -> bool

      Method called by `in` operator. Doesn't support broadcasting as Python insists
      on converting the result to a boolean.

      :param value: A single point to check for membership of this :class:`SearchSpace`.
      :return: `True` if ``value`` is a member of this search space, else `False`.
      :raise ValueError (or tf.errors.InvalidArgumentError): If ``value`` has a different
          dimensionality from this :class:`SearchSpace`.



   .. py:property:: dimension
      :type: trieste.types.TensorType

      :abstractmethod:


      The number of inputs in this search space.



   .. py:property:: has_bounds
      :type: bool

      :abstractmethod:


      Whether the search space has meaningful numerical bounds.



   .. py:property:: lower
      :type: trieste.types.TensorType

      :abstractmethod:


      The lowest value taken by each search space dimension.



   .. py:property:: upper
      :type: trieste.types.TensorType

      :abstractmethod:


      The highest value taken by each search space dimension.



   .. py:method:: product(other: SearchSpaceType) -> SearchSpaceType
      :abstractmethod:


      :param other: A search space of the same type as this search space.
      :return: The Cartesian product of this search space with the ``other``.
          Subclasses that do not support a same-type product should raise
          :exc:`NotImplementedError`; :meth:`__mul__` then falls back to a
          :class:`TaggedProductSearchSpace`.



   .. py:method:: __mul__(other: SearchSpaceType) -> SearchSpaceType
                  __mul__(other: SearchSpace) -> SearchSpace

      :param other: A search space.
      :return: The Cartesian product of this search space with the ``other``.
          If both spaces are of the same type (and have no constraints)
          then this calls the :meth:`product` method.
          Otherwise, it generates a :class:`TaggedProductSearchSpace`.



   .. py:method:: __pow__(other: int) -> SearchSpaceType

      Return the Cartesian product of ``other`` instances of this search space. For example, for
      an exponent of `3`, and search space `s`, this is `s ** 3`, which is equivalent to
      `s * s * s`.

      :param other: The exponent, or number of instances of this search space to multiply
          together. Must be strictly positive.
      :return: The Cartesian product of ``other`` instances of this search space.
      :raise tf.errors.InvalidArgumentError: If the exponent ``other`` is less than 1.



   .. py:method:: discretize(num_samples: int) -> DiscreteSearchSpace

      :param num_samples: The number of points in the :class:`DiscreteSearchSpace`.
      :return: A discrete search space consisting of ``num_samples`` points sampled uniformly from
          this search space.
      :raise NotImplementedError: If this :class:`SearchSpace` has constraints.



   .. py:method:: __eq__(other: object) -> bool
      :abstractmethod:


      :param other: A search space.
      :return: Whether the search space is identical to this one.



   .. py:property:: constraints
      :type: Sequence[Constraint]


      The sequence of explicit constraints specified in this search space.



   .. py:method:: constraints_residuals(points: trieste.types.TensorType) -> trieste.types.TensorType
      :abstractmethod:


      Return residuals for all the constraints in this :class:`SearchSpace`.

      :param points: The points to get the residuals for, with shape [..., D].
      :return: A tensor of all the residuals with shape [..., C], where C is the total number of
          constraints.
      :raise NotImplementedError: If this :class:`SearchSpace` does not support constraints.



   .. py:method:: is_feasible(points: trieste.types.TensorType) -> trieste.types.TensorType

      Checks if points satisfy the explicit constraints of this :class:`SearchSpace`.
      Note membership of the search space is not checked.

      :param points: The points to check constraints feasibility for, with shape [..., D].
      :return: A tensor of booleans. Returns `True` for each point if it is feasible in this
          search space, else `False`.
      :raise NotImplementedError: If this :class:`SearchSpace` has constraints.



   .. py:property:: has_constraints
      :type: bool


      Returns `True` if this search space has any explicit constraints specified.



.. py:class:: GeneralDiscreteSearchSpace(points: trieste.types.TensorType)

   Bases: :py:obj:`SearchSpace`


   An ABC representing different types of discrete search spaces (not just numerical).
   This contains a default implementation using explicitly provided points which subclasses
   may ignore.

   :param points: The points that define the discrete space, with shape ('N', 'D').
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``points`` has an invalid shape.


   .. py:property:: points
      :type: trieste.types.TensorType


      All the points in this space.



   .. py:property:: dimension
      :type: trieste.types.TensorType


      The number of inputs in this search space.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      Space-specific implementation of membership. Can assume valid input shape.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.



   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      :param num_samples: The number of points to sample from this search space.
      :param seed: Random seed for reproducibility.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from this search space.



.. py:class:: DiscreteSearchSpace(points: trieste.types.TensorType)

   Bases: :py:obj:`GeneralDiscreteSearchSpace`


   A discrete :class:`SearchSpace` representing a finite set of :math:`D`-dimensional points in
   :math:`\mathbb{R}^D`.

   For example:

       >>> points = tf.constant([[-1.0, 0.4], [-1.0, 0.6], [0.0, 0.4]])
       >>> search_space = DiscreteSearchSpace(points)
       >>> assert tf.constant([0.0, 0.4]) in search_space
       >>> assert tf.constant([1.0, 0.5]) not in search_space


   :param points: The points that define the discrete space, with shape ('N', 'D').
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``points`` has an invalid shape.


   .. py:property:: has_bounds
      :type: bool


      Whether the search space has meaningful numerical bounds.



   .. py:property:: lower
      :type: trieste.types.TensorType


      The lowest value taken across all points by each search space dimension.



   .. py:property:: upper
      :type: trieste.types.TensorType


      The highest value taken across all points by each search space dimension.



   .. py:method:: product(other: DiscreteSearchSpace) -> DiscreteSearchSpace

      Return the Cartesian product of the two :class:`DiscreteSearchSpace`\ s. For example:

          >>> sa = DiscreteSearchSpace(tf.constant([[0, 1], [2, 3]]))
          >>> sb = DiscreteSearchSpace(tf.constant([[4, 5, 6], [7, 8, 9]]))
          >>> (sa * sb).points.numpy()
          array([[0, 1, 4, 5, 6],
                 [0, 1, 7, 8, 9],
                 [2, 3, 4, 5, 6],
                 [2, 3, 7, 8, 9]], dtype=int32)

      :param other: A :class:`DiscreteSearchSpace` with :attr:`points` of the same dtype as this
          search space.
      :return: The Cartesian product of the two :class:`DiscreteSearchSpace`\ s.
      :raise TypeError: If one :class:`DiscreteSearchSpace` has :attr:`points` of a different
          dtype to the other.



   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one.



.. py:class:: BooleanSearchSpace(dtype: tensorflow.DType = DEFAULT_DTYPE)

   Bases: :py:obj:`DiscreteSearchSpace`


   A 1-D :class:`DiscreteSearchSpace` restricted to :math:`\{0, 1\}`, representing a single
   Boolean indicator variable from the GDP formulation. Provides a distinct type for
   dispatch in validation and downstream consumers (e.g. GA bitflip mutation, kernel
   active/inactive checks).

   Example:

       >>> space = BooleanSearchSpace()
       >>> assert space.dimension == 1
       >>> assert tf.constant([0.0], dtype=tf.float64) in space
       >>> assert tf.constant([1.0], dtype=tf.float64) in space
       >>> assert tf.constant([2.0], dtype=tf.float64) not in space


   :param dtype: The dtype of the points. Defaults to :data:`DEFAULT_DTYPE`.


   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one.



.. py:class:: HasOneHotEncoder

   Bases: :py:obj:`typing_extensions.Protocol`


   A categorical search space that contains default logic for one-hot encoding.


   .. py:property:: one_hot_encoder
      :type: EncoderFunction

      :abstractmethod:


      A one-hot encoder for points in the search space.



.. py:function:: one_hot_encoder(space: SearchSpace) -> EncoderFunction

   A utility function for one-hot encoding a search space when it supports it.


.. py:function:: cast_encoder(encoder: EncoderFunction, input_dtype: Optional[tensorflow.DType] = None, output_dtype: Optional[tensorflow.DType] = None) -> EncoderFunction

   A utility function for casting the input and/or output of an encoder.


.. py:function:: one_hot_encoded_space(space: SearchSpace) -> SearchSpace

   A bounded search space corresponding to the one-hot encoding of the given space.


.. py:class:: CategoricalSearchSpace(categories: int | Sequence[int] | Sequence[str] | Sequence[Sequence[str]], dtype: tensorflow.DType = DEFAULT_DTYPE)

   Bases: :py:obj:`GeneralDiscreteSearchSpace`, :py:obj:`HasOneHotEncoder`


   A categorical :class:`SearchSpace` representing a finite set :math:`\mathcal{C}` of categories,
   or a finite Cartesian product :math:`\mathcal{C}_1 \times \cdots \times \mathcal{C}_n` of
   such sets.

   For example:

       >>> CategoricalSearchSpace(5)
       CategoricalSearchSpace([('0', '1', '2', '3', '4')])
       >>> CategoricalSearchSpace(["Red", "Green", "Blue"])
       CategoricalSearchSpace([('Red', 'Green', 'Blue')])
       >>> CategoricalSearchSpace([2,3])
       CategoricalSearchSpace([('0', '1'), ('0', '1', '2')])
       >>> CategoricalSearchSpace([["R", "G", "B"], ["Y", "N"]])
       CategoricalSearchSpace([('R', 'G', 'B'), ('Y', 'N')])

   Note that internally categories are represented by numeric indices:

       >>> rgb = CategoricalSearchSpace(["Red", "Green", "Blue"])
       >>> assert tf.constant([1], dtype=tf.float64) in rgb
       >>> assert tf.constant([3], dtype=tf.float64) not in rgb
       >>> rgb.to_tags(tf.constant([[1], [0], [2]]))
       <tf.Tensor: shape=(3, 1), dtype=string, numpy=
       array([[b'Green'],
              [b'Red'],
              [b'Blue']], dtype=object)>


   :param categories: Number of categories or category names. Can be an array for
       multidimensional spaces.
   :param dtype: The dtype of the returned indices, either tf.float32 or tf.float64.


   .. py:property:: has_bounds
      :type: bool


      Whether the search space has meaningful numerical bounds.



   .. py:property:: lower
      :type: trieste.types.TensorType


      The lowest value taken by each search space dimension.



   .. py:property:: upper
      :type: trieste.types.TensorType


      The highest value taken by each search space dimension.



   .. py:property:: tags
      :type: Sequence[Sequence[str]]


      The tags of the categories.



   .. py:property:: one_hot_encoder
      :type: EncoderFunction


      A one-hot encoder for the numerical indices. Note that binary categories
      are left unchanged instead of adding an unnecessary second feature.



   .. py:method:: to_tags(indices: trieste.types.TensorType) -> trieste.types.TensorType

      Convert a tensor of indices (such as one returned by :meth:`sample`) to one of
      category tags.

      :param indices: A tensor of integer indices.
      :return: A tensor of string tags.



   .. py:method:: product(other: CategoricalSearchSpace) -> CategoricalSearchSpace

      Return the Cartesian product of the two :class:`CategoricalSearchSpace`\ s. For example:

          >>> rgb = CategoricalSearchSpace(["Red", "Green", "Blue"])
          >>> yn = CategoricalSearchSpace(["Yes", "No"])
          >>> rgb * yn
          CategoricalSearchSpace([('Red', 'Green', 'Blue'), ('Yes', 'No')])

      :param other: A :class:`CategoricalSearchSpace`.
      :return: The Cartesian product of the two :class:`CategoricalSearchSpace`\ s.



   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one.



.. py:class:: Box(lower: Sequence[float], upper: Sequence[float], constraints: Optional[Sequence[Constraint]] = None, ctol: float | trieste.types.TensorType = 1e-07)
              Box(lower: trieste.types.TensorType, upper: trieste.types.TensorType, constraints: Optional[Sequence[Constraint]] = None, ctol: float | trieste.types.TensorType = 1e-07)

   Bases: :py:obj:`SearchSpace`


   Continuous :class:`SearchSpace` representing a :math:`D`-dimensional box in
   :math:`\mathbb{R}^D`. Mathematically it is equivalent to the Cartesian product of :math:`D`
   closed bounded intervals in :math:`\mathbb{R}`.

   If ``lower`` and ``upper`` are `Sequence`\ s of floats (such as lists or tuples),
   they will be converted to tensors of dtype `DEFAULT_DTYPE`.

   :param lower: The lower (inclusive) bounds of the box. Must have shape [D] for positive D,
       and if a tensor, must have float type.
   :param upper: The upper (inclusive) bounds of the box. Must have shape [D] for positive D,
       and if a tensor, must have float type.
   :param constraints: Sequence of explicit input constraints for this search space.
   :param ctol: Tolerance to use to check constraints satisfaction.
   :raise ValueError (or tf.errors.InvalidArgumentError): If any of the following are true:

       - ``lower`` and ``upper`` have invalid shapes.
       - ``lower`` and ``upper`` do not have the same floating point type.
       - ``upper`` is not greater or equal to ``lower`` across all dimensions.


   .. py:property:: has_bounds
      :type: bool


      Whether the search space has meaningful numerical bounds.



   .. py:property:: lower
      :type: tensorflow.Tensor


      The lower bounds of the box.



   .. py:property:: upper
      :type: tensorflow.Tensor


      The upper bounds of the box.



   .. py:property:: dimension
      :type: trieste.types.TensorType


      The number of inputs in this search space.



   .. py:property:: constraints
      :type: Sequence[Constraint]


      The sequence of explicit constraints specified in this search space.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      For each point in ``value``, return `True` if the point is a member of this search space,
      else `False`. A point is a member if all of its coordinates lie in the closed intervals
      bounded by the lower and upper bounds.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.



   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      Sample randomly from the space.

      :param num_samples: The number of points to sample from this search space.
      :param seed: Random seed for reproducibility.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from this search space with shape '[num_samples, D]' , where D is the search space
          dimension.



   .. py:method:: sample_halton(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      Sample from the space using a Halton sequence. The resulting samples are guaranteed to be
      diverse and are reproducible by using the same choice of ``seed``.

      :param num_samples: The number of points to sample from this search space.
      :param seed: Random seed for the halton sequence
      :return: ``num_samples`` of points, using halton sequence with shape '[num_samples, D]' ,
          where D is the search space dimension.



   .. py:method:: sample_sobol(num_samples: int, skip: Optional[int] = None) -> trieste.types.TensorType

      Sample a diverse set from the space using a Sobol sequence.
      If ``skip`` is specified, then the resulting samples are reproducible.

      :param num_samples: The number of points to sample from this search space.
      :param skip: The number of initial points of the Sobol sequence to skip
      :return: ``num_samples`` of points, using sobol sequence with shape '[num_samples, D]' ,
          where D is the search space dimension.



   .. py:method:: _sample_feasible_loop(num_samples: int, sampler: Callable[[], trieste.types.TensorType], max_tries: int = 100) -> trieste.types.TensorType

      Rejection sampling using provided callable. Try ``max_tries`` number of times to find
      ``num_samples`` feasible points.

      :param num_samples: The number of feasible points to sample from this search space.
      :param sampler: Callable to return samples. Called potentially multiple times.
      :param max_tries: Maximum attempts to sample the requested number of points.
      :return: ``num_samples`` feasible points sampled using ``sampler``.
      :raise SampleTimeoutError: If ``max_tries`` are exhausted before ``num_samples`` are
          sampled.



   .. py:method:: sample_feasible(num_samples: int, seed: Optional[int] = None, max_tries: int = 100) -> trieste.types.TensorType

      Sample feasible points randomly from the space.

      :param num_samples: The number of feasible points to sample from this search space.
      :param seed: Random seed for reproducibility.
      :param max_tries: Maximum attempts to sample the requested number of points.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from this search space with shape '[num_samples, D]' , where D is the search space
          dimension.
      :raise SampleTimeoutError: If ``max_tries`` are exhausted before ``num_samples`` are
          sampled.



   .. py:method:: sample_halton_feasible(num_samples: int, seed: Optional[int] = None, max_tries: int = 100) -> trieste.types.TensorType

      Sample feasible points from the space using a Halton sequence. The resulting samples are
      guaranteed to be diverse and are reproducible by using the same choice of ``seed``.

      :param num_samples: The number of feasible points to sample from this search space.
      :param seed: Random seed for the halton sequence
      :param max_tries: Maximum attempts to sample the requested number of points.
      :return: ``num_samples`` of points, using halton sequence with shape '[num_samples, D]' ,
          where D is the search space dimension.
      :raise SampleTimeoutError: If ``max_tries`` are exhausted before ``num_samples`` are
          sampled.



   .. py:method:: sample_sobol_feasible(num_samples: int, skip: Optional[int] = None, max_tries: int = 100) -> trieste.types.TensorType

      Sample a diverse set of feasible points from the space using a Sobol sequence.
      If ``skip`` is specified, then the resulting samples are reproducible.

      :param num_samples: The number of feasible points to sample from this search space.
      :param skip: The number of initial points of the Sobol sequence to skip
      :param max_tries: Maximum attempts to sample the requested number of points.
      :return: ``num_samples`` of points, using sobol sequence with shape '[num_samples, D]' ,
          where D is the search space dimension.
      :raise SampleTimeoutError: If ``max_tries`` are exhausted before ``num_samples`` are
          sampled.



   .. py:method:: product(other: Box) -> Box

      Return the Cartesian product of the two :class:`Box`\ es (concatenating their respective
      lower and upper bounds). For example:

          >>> unit_interval = Box([0.0], [1.0])
          >>> square_at_origin = Box([-2.0, -2.0], [2.0, 2.0])
          >>> new_box = unit_interval * square_at_origin
          >>> new_box.lower.numpy()
          array([ 0., -2., -2.])
          >>> new_box.upper.numpy()
          array([1., 2., 2.])

      :param other: A :class:`Box` with bounds of the same type as this :class:`Box`.
      :return: The Cartesian product of the two :class:`Box`\ es.
      :raise TypeError: If the bounds of one :class:`Box` have different dtypes to those of
          the other :class:`Box`.



   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one.



   .. py:method:: constraints_residuals(points: trieste.types.TensorType) -> trieste.types.TensorType

      Return residuals for all the constraints in this :class:`SearchSpace`.

      :param points: The points to get the residuals for, with shape [..., D].
      :return: A tensor of all the residuals with shape [..., C], where C is the total number of
          constraints.



   .. py:method:: is_feasible(points: trieste.types.TensorType) -> trieste.types.TensorType

      Checks if points satisfy the explicit constraints of this :class:`SearchSpace`.
      Note membership of the search space is not checked.

      :param points: The points to check constraints feasibility for, with shape [..., D].
      :return: A tensor of booleans. Returns `True` for each point if it is feasible in this
          search space, else `False`.



   .. py:property:: has_constraints
      :type: bool


      Returns `True` if this search space has any explicit constraints specified.



.. py:class:: CollectionSearchSpace(spaces: Sequence[SearchSpace], tags: Optional[Sequence[str]] = None)

   Bases: :py:obj:`SearchSpace`


   An abstract :class:`SearchSpace` consisting of a collection of multiple :class:`SearchSpace`
   objects, each with a unique tag. This class provides functionality for accessing each individual
   space.

   Note that the individual spaces are not combined in any way.

   Build a :class:`CollectionSearchSpace` from a list ``spaces`` of other spaces. If
   ``tags`` are provided then they form the identifiers of the subspaces, otherwise the
   subspaces are labelled numerically.

   :param spaces: A sequence of :class:`SearchSpace` objects representing the space's subspaces
   :param tags: An optional list of tags giving the unique identifiers of
       the space's subspaces.
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``spaces`` has a different
       length to ``tags`` when ``tags`` is provided or if ``tags`` contains duplicates.


   .. py:property:: has_bounds
      :type: bool


      Whether the search space has meaningful numerical bounds.



   .. py:property:: subspace_lower
      :type: Sequence[trieste.types.TensorType]


      The lowest values taken by each space dimension, in the same order as specified when
      initializing the space.



   .. py:property:: subspace_upper
      :type: Sequence[trieste.types.TensorType]


      The highest values taken by each space dimension, in the same order as specified when
      initializing the space.



   .. py:property:: subspace_tags
      :type: tuple[str, Ellipsis]


      Return the names of the subspaces contained in this space.



   .. py:property:: subspace_dimension
      :type: Sequence[trieste.types.TensorType]


      The number of inputs in each subspace, in the same order as specified when initializing
      the space.



   .. py:method:: get_subspace(tag: str) -> SearchSpace

      Return the domain of a particular subspace.

      :param tag: The tag specifying the target subspace.
      :return: Target subspace.



   .. py:method:: subspace_sample(num_samples: int, seed: Optional[int] = None) -> Sequence[trieste.types.TensorType]

      Sample randomly from the space by sampling from each subspace
      and returning the resulting samples in the same order as specified when initializing
      the space.

      :param num_samples: The number of points to sample from each subspace.
      :param seed: Optional tf.random seed.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from each search subspace with shape '[num_samples, D]' , where D is the search space
          dimension.



   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one.



.. py:class:: TaggedProductSearchSpace(spaces: Sequence[SearchSpace], tags: Optional[Sequence[str]] = None)

   Bases: :py:obj:`CollectionSearchSpace`, :py:obj:`HasOneHotEncoder`


   Product :class:`SearchSpace` consisting of a product of
   multiple :class:`SearchSpace`. This class provides functionality for
   accessing either the resulting combined search space or each individual space.
   This class is useful for defining mixed search spaces, for example:

       context_space = DiscreteSearchSpace(tf.constant([[-0.5, 0.5]]))
       decision_space = Box([-1, -2], [2, 3])
       mixed_space = TaggedProductSearchSpace(spaces=[context_space, decision_space])

   Note: the dtype of all the component search spaces must be the same.

   Note that this class assumes that individual points in product spaces are
   represented with their inputs in the same order as specified when initializing
   the space.

   Build a :class:`TaggedProductSearchSpace` from a list ``spaces`` of other spaces. If
   ``tags`` are provided then they form the identifiers of the subspaces, otherwise the
   subspaces are labelled numerically.

   :param spaces: A sequence of :class:`SearchSpace` objects representing the space's subspaces
   :param tags: An optional list of tags giving the unique identifiers of
       the space's subspaces.
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``spaces`` has a different
       length to ``tags`` when ``tags`` is provided or if ``tags`` contains duplicates.


   .. py:property:: lower
      :type: trieste.types.TensorType


      The lowest values taken by each space dimension, concatenated across subspaces.



   .. py:property:: upper
      :type: trieste.types.TensorType


      The highest values taken by each space dimension, concatenated across subspaces.



   .. py:property:: dimension
      :type: trieste.types.TensorType


      The number of inputs in this product search space.



   .. py:method:: fix_subspace(tag: str, values: trieste.types.TensorType) -> TaggedProductSearchSpace

      Return a new :class:`TaggedProductSearchSpace` with the specified subspace replaced with
      a :class:`DiscreteSearchSpace` containing ``values`` as its points. This is useful if you
      wish to restrict subspaces to sets of representative points.

      :param tag: The tag specifying the target subspace.
      :param values: The  values used to populate the new discrete subspace.z
      :return: New :class:`TaggedProductSearchSpace` with the specified subspace replaced with
          a :class:`DiscreteSearchSpace` containing ``values`` as its points.



   .. py:method:: get_subspace_component(tag: str, values: trieste.types.TensorType) -> trieste.types.TensorType

      Returns the components of ``values`` lying in a particular subspace.

      :param tag: Subspace tag.
      :param values: Points from the :class:`TaggedProductSearchSpace` of shape [N,Dprod].
      :return: The sub-components of ``values`` lying in the specified subspace, of shape
          [N, Dsub], where Dsub is the dimensionality of the specified subspace.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      Return `True` if ``value`` is a member of this search space, else `False`. A point is a
      member if each of its subspace components lie in each subspace.

      Recall that individual points in product spaces are represented with their inputs in the
      same order as specified when initializing the space.

      :param value: A point to check for membership of this :class:`SearchSpace`.
      :return: `True` if ``value`` is a member of this search space, else `False`. May return a
          scalar boolean `TensorType` instead of the `bool` itself.
      :raise ValueError (or tf.errors.InvalidArgumentError): If ``value`` has a different
          dimensionality from the search space.



   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      Sample randomly from the space by sampling from each subspace
      and concatenating the resulting samples.

      :param num_samples: The number of points to sample from this search space.
      :param seed: Optional tf.random seed.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from this search space with shape '[num_samples, D]' , where D is the search space
          dimension.



   .. py:method:: product(other: TaggedProductSearchSpace) -> TaggedProductSearchSpace

      Return the Cartesian product of the two :class:`TaggedProductSearchSpace`\ s,
      building a tree of :class:`TaggedProductSearchSpace`\ s.

      :param other: A search space of the same type as this search space.
      :return: The Cartesian product of this search space with the ``other``.



   .. py:property:: one_hot_encoder
      :type: EncoderFunction


      An encoder that one-hot-encodes all subpsaces that support it (and leaves
      the other subspaces unchanged).



.. py:function:: _reject_duplicate_tags(seq_name: str, tags: Sequence[str]) -> None

   Raise ``ValueError`` if ``tags`` contains duplicates (shared by the hierarchy helper and
   :class:`HierarchicalSearchSpace`).


.. py:function:: _build_tag_to_columns_map(tag_sizes: Sequence[tuple[str, int]]) -> dict[str, list[int]]

   Lay tags out in order along the flat vector, each occupying ``size`` consecutive columns.

   :param tag_sizes: ``(tag, dimension)`` pairs in flat-vector order.
   :return: a mapping from tag to its flat-vector column indices.


.. py:class:: HierarchyNode

   Tag-based specification of one node in a :class:`HierarchicalSearchSpace` hierarchy.

   A node owns a set of non-indicator (feature) subspaces, referenced by tag, and is active
   only when its gating indicators take the required values (also by tag). References are by
   tag; the owning :class:`HierarchicalSearchSpace` resolves them to the flat-vector column
   layout (and to a :class:`gpflow.kernels.HierarchyNode`) internally, so ``subspaces`` is
   supplied once -- to the space -- rather than to every node.

   :param name: Human-readable label for the node (also the kernel-association identifier).
   :param subspace_tags: Tags of the non-indicator subspaces owned by this node. Each must be a
       key of the space's ``subspaces`` and define numerical bounds (e.g. a :class:`Box`). Must
       be non-empty and contain no duplicates.
   :param activity_condition_tags: ``{indicator_tag: required_value}`` gating this node; empty
       (the default) means the node is unconditionally active.


.. py:function:: _resolve_node(node: HierarchyNode, subspaces: Mapping[str, SearchSpace], tag_to_columns: Mapping[str, Sequence[int]]) -> gpflow.kernels.HierarchyNode

   Resolve a tag-based :class:`HierarchyNode` to the gpflow column-based node.

   The GPflow type is keyed on integer column indices (``feature_dims``) and an
   :class:`ActivityCondition` whose keys are also flat-vector columns, in the layout given by
   ``tag_to_columns`` (one column per dimension of each subspace, in ``subspaces`` order).
   Values are coerced to ``int`` so K-ary categorical category indices survive without
   bool-coercion. GPflow performs node-local validation downstream.


.. py:data:: INACTIVE_CONSTRAINT_RESIDUAL
   :type:  float
   :value: 10000000000.0


   Large positive residual returned for an inactive :class:`ConditionalConstraint`, so the
   point is trivially feasible with respect to that constraint. This is inspired by the "big-M"
   MI(N)LP reformulation of a generalized disjunctive program: allocating feasible-with-huge-
   margin on the inactive branch.


.. py:class:: ConditionalConstraint

   A disjunctive constraint :math:`h(x) \leq 0` enforced only when a set of indicator
   variables take specified values.

   When the ``indicator_conditions`` all hold for a point, the wrapped ``constraint`` is
   evaluated on the slice of that point identified by ``active_subspace_tags`` (concatenated in
   the given order). When they do not hold, the residual is set to
   :data:`INACTIVE_CONSTRAINT_RESIDUAL`, making the point feasible with respect to this
   constraint. References are by tag, so a conditional constraint survives
   :meth:`HierarchicalSearchSpace.product` unchanged.

   :param constraint: The underlying :class:`LinearConstraint` / :class:`NonlinearConstraint`,
       defined on the concatenated ``active_subspace_tags`` slice.
   :param indicator_conditions: ``{indicator_tag: required_value}`` gating the constraint.
   :param active_subspace_tags: Non-indicator subspace tags whose columns the constraint reads.


   .. py:method:: residual(points: trieste.types.TensorType, space: HierarchicalSearchSpace) -> trieste.types.TensorType

      Constraint residuals, big-M where the indicator conditions are not met.

      :param points: Points in the flat-vector representation, shape ``[..., D]``.
      :param space: The owning :class:`HierarchicalSearchSpace` (provides tag slicing).
      :return: Residuals with shape ``[..., C]`` matching the wrapped constraint.



.. py:class:: LogicalProposition

   A feasibility constraint on the indicator variables alone, :math:`\Omega(Y)`.

   ``fun`` receives ``{indicator_tag: values}`` where each value has shape ``[..., 1]`` (values
   in the indicator's permitted set) and must return a boolean tensor of shape ``[...]``.
   Logical propositions are checked by :meth:`HierarchicalSearchSpace.is_feasible` but are
   **not** included in :meth:`HierarchicalSearchSpace.constraints_residuals`, as they have no
   useful gradient for continuous optimizers. They reference indicators by tag, so they survive
   :meth:`HierarchicalSearchSpace.product` unchanged.

   :param fun: Maps ``{indicator_tag: [..., 1]}`` to a boolean feasibility tensor ``[...]``.
   :param name: Optional human-readable label.


.. py:class:: HierarchicalSearchSpace(subspaces: Mapping[str, SearchSpace], hierarchy: Sequence[HierarchyNode], constraints: Optional[Sequence[Constraint]] = None, conditional_constraints: Sequence[ConditionalConstraint] = (), logical_propositions: Sequence[LogicalProposition] = (), ctol: float | trieste.types.TensorType = 1e-07)

   Bases: :py:obj:`CollectionSearchSpace`


   A :class:`SearchSpace` that extends :class:`CollectionSearchSpace` with a hierarchy
   specification describing conditional activation of subspaces.

   The hierarchy is described by a sequence of tag-based :class:`HierarchyNode`
   objects (each owning ``subspace_tags`` and gated by ``activity_condition_tags``); the
   space resolves them to gpflow's column-based representation internally (see
   :meth:`to_gpflow_hierarchy`). Variables fall into three roles:

   - **Indicators** (:class:`BooleanSearchSpace` or dimension-1
     :class:`CategoricalSearchSpace`), inferred by role as the subspaces referenced
     as ``activity_condition_tags`` keys in the hierarchy.
     Boolean indicators take values in :math:`\{0, 1\}`, ``K``-ary categorical
     indicators in :math:`\{0, \ldots, K-1\}`. Indicators are always
     unconditional; they must not appear in any node's ``subspace_tags``.
   - **Unconditional variables** owned by a node with empty
     ``activity_condition_tags``. Always active.
   - **Conditional variables** owned by a node with non-empty
     ``activity_condition_tags``. Active only when the referenced
     indicators take the required values.

   Points are represented as flat vectors concatenated in the iteration order
   of ``subspaces`` (a ``dict`` preserves insertion order in Python 3.7+), the
   same convention as :class:`TaggedProductSearchSpace`.

   .. note::
       ``sample`` and ``contains`` operate on the full flat vector and do **not**
       enforce "active-branch" semantics: every subspace always contributes its
       columns regardless of the indicator values, and inactive-branch columns are
       neither masked nor ignored. This matches the flat-vector convention expected
       by the hierarchical GP kernel, which reads the indicator columns itself to
       decide which features are active.

   .. note::
       Non-indicator subspaces must define numerical bounds (e.g. :class:`Box`).
       Categorical (non-indicator) subspaces are not supported, since the hierarchy
       encodes each non-indicator dimension as a ``(lower, upper)`` bound and there
       is no one-hot handling here; constructing such a space raises ``ValueError``.

   Example::

       subspaces = {
           "x1": Box([0.0], [1.0]),
           "y1": BooleanSearchSpace(),
           "x2": Box([0.0], [5.0]),
           "x4": Box([-2.0], [2.0]),
           "x3": Box([-1.0], [1.0]),
       }
       hierarchy = [
           HierarchyNode("shared", subspace_tags=["x1"]),
           HierarchyNode("branch_A", subspace_tags=["x2", "x4"],
                         activity_condition_tags={"y1": 1}),
           HierarchyNode("branch_B", subspace_tags=["x3"],
                         activity_condition_tags={"y1": 0}),
       ]
       space = HierarchicalSearchSpace(subspaces, hierarchy)

   :param subspaces: Tag-keyed mapping of subspaces; iteration order
       defines the flat-vector layout.
   :param hierarchy: A sequence of tag-based :class:`HierarchyNode` objects
       defining the conditional structure. Every non-indicator subspace tag
       must appear in at least one node's ``subspace_tags``. Indicators are
       inferred by role: a subspace referenced as an ``activity_condition_tags``
       key is an indicator and must be a :class:`BooleanSearchSpace` or a
       dimension-1 :class:`CategoricalSearchSpace`.
   :param constraints: Optional explicit (global) constraints enforced on the
       full flat-vector representation, following the same ``constraints``
       contract as :class:`Box`. Consumed by :meth:`constraints_residuals`
       and :meth:`is_feasible`, so a constrained space plugs into the usual
       Bayesian optimization machinery unchanged.
   :param conditional_constraints: Disjunctive constraints, each enforced only
       when its indicator conditions hold (see :class:`ConditionalConstraint`);
       inactive rows contribute :data:`INACTIVE_CONSTRAINT_RESIDUAL`.
   :param logical_propositions: Indicator-only feasibility constraints (see
       :class:`LogicalProposition`); applied in :meth:`is_feasible` but excluded
       from :meth:`constraints_residuals` (no continuous gradient).
   :param ctol: Tolerance used by :meth:`is_feasible` when checking that
       residuals are non-negative.
   :raises ValueError: If any validation rule is violated.


   .. py:method:: __eq__(other: object) -> bool

      :param other: A search space.
      :return: Whether the search space is identical to this one, including its
          hierarchy and indicator tags (the base-class comparison only covers the
          subspaces and their tags).



   .. py:property:: hierarchy
      :type: tuple[HierarchyNode, Ellipsis]


      The tag-based hierarchy specification (the :class:`HierarchyNode`\ s as supplied).



   .. py:method:: to_gpflow_hierarchy() -> list[gpflow.kernels.HierarchyNode]

      The hierarchy resolved to gpflow's column-based
      :class:`gpflow.kernels.HierarchyNode`\ s, ready to build a hierarchical kernel, e.g.
      ``ArcHierarchical(space.to_gpflow_hierarchy(), active_dims=...)``.



   .. py:property:: indicator_tags
      :type: tuple[str, Ellipsis]


      The declared indicator tags (Boolean or categorical).



   .. py:property:: indicator_dims
      :type: list[int]


      Flat-vector column indices corresponding to ``indicator_tags``, in declared order.

      These are the columns referenced by the keys of each node's
      ``activity_condition.requirements`` (gpflow's convention). Each indicator
      subspace contributes exactly one column (dimension 1).



   .. py:property:: indicator_value_sets
      :type: dict[str, tuple[int, Ellipsis]]


      The permitted integer-valued set for each indicator tag, as built during
      validation. ``(0, 1)`` for a :class:`BooleanSearchSpace` indicator and
      ``(0, ..., K-1)`` for a ``K``-ary :class:`CategoricalSearchSpace` indicator.



   .. py:property:: non_indicator_tags
      :type: tuple[str, Ellipsis]


      All subspace tags that are not indicators, in tag order.



   .. py:property:: constraints
      :type: Sequence[Constraint]


      The explicit (global) constraints enforced on the full flat-vector representation.



   .. py:property:: ctol
      :type: float | trieste.types.TensorType


      The tolerance applied when checking the explicit constraints.



   .. py:property:: conditional_constraints
      :type: tuple[ConditionalConstraint, Ellipsis]


      The disjunctive constraints gated by indicator conditions.



   .. py:property:: logical_propositions
      :type: tuple[LogicalProposition, Ellipsis]


      The indicator-only feasibility constraints.



   .. py:property:: has_constraints
      :type: bool


      ``True`` if any global, conditional, or logical constraints are present.



   .. py:method:: constraints_residuals(points: trieste.types.TensorType) -> trieste.types.TensorType

      Return residuals for all global and conditional constraints in this search space.
      Global constraints are evaluated on the full flat vector; conditional constraints
      return :data:`INACTIVE_CONSTRAINT_RESIDUAL` on rows where their indicator conditions
      do not hold. Logical propositions are excluded (no continuous gradient); use
      :meth:`is_feasible` to account for them.

      :param points: The points to get the residuals for, with shape ``[..., D]``.
      :return: A tensor of all the residuals with shape ``[..., C]``, where ``C`` is the
          total number of constraint residual columns.
      :raise NotImplementedError: If this search space has no global or conditional
          constraints.



   .. py:method:: is_feasible(points: trieste.types.TensorType) -> trieste.types.TensorType

      Check whether points satisfy all constraints of this search space — global and
      conditional (via residuals) and logical propositions. Note that membership of the space
      (the conditional activity structure) is not checked here.

      :param points: The points to check, with shape ``[..., D]``.
      :return: A boolean tensor of shape ``[...]``, ``True`` where the point is feasible.



   .. py:property:: dimension
      :type: trieste.types.TensorType


      The total number of dimensions across all subspaces.



   .. py:property:: lower
      :type: trieste.types.TensorType


      The lowest values taken by each dimension, concatenated across subspaces.



   .. py:property:: upper
      :type: trieste.types.TensorType


      The highest values taken by each dimension, concatenated across subspaces.



   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      Sample from the space by sampling each subspace and concatenating.

      Every subspace is sampled and contributes its columns; this does **not**
      enforce active-branch semantics (inactive-branch columns are still filled).
      See the class docstring.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      Space-specific implementation of membership. Can assume valid input shape.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.



   .. py:method:: get_subspace_component(tag: str, values: trieste.types.TensorType) -> trieste.types.TensorType

      Extract the columns of ``values`` corresponding to a particular subspace.

      :param tag: The subspace tag.
      :param values: Points from this space, shape ``[N, D]``.
      :return: The sub-components, shape ``[N, D_sub]``.



   .. py:method:: _node_subspace_tags(node: HierarchyNode) -> list[str]

      The (unique, ordered) non-indicator subspace tags a node owns.



   .. py:method:: active_subspace_tags(indicator_config: Mapping[str, int]) -> list[str]

      Return the non-indicator subspace tags that are active for a given indicator
      configuration.

      :param indicator_config: A mapping ``{indicator_tag: value}`` providing a value for
          every indicator of this space. Extra keys are ignored.
      :return: List of active non-indicator subspace tags.
      :raise ValueError: If ``indicator_config`` omits any indicator.



   .. py:method:: enumerate_tasks(feasible_only: bool = False) -> list[dict[str, int]]

      Return indicator configurations as the Cartesian product of each indicator's
      permitted value set.

      Both Boolean and ``K``-ary categorical indicators contribute the integer values
      ``[0, 1, ..., K-1]`` (with ``K = 2`` for Boolean indicators); the total number of
      configurations equals :math:`\prod_k |\mathcal{C}_k|`.

      :param feasible_only: By default the full Cartesian product is returned, ignoring any
          :class:`LogicalProposition`\ s. When ``True``, configurations that violate any logical
          proposition are dropped (global/conditional constraints, which involve the continuous
          variables, are not considered here).
      :return: A list of ``{indicator_tag: value}`` dictionaries, one per task.



   .. py:method:: is_active(tag: str, indicator_config: Mapping[str, int]) -> bool

      Check whether a non-indicator subspace is active for a given indicator configuration.

      :param tag: A non-indicator subspace tag.
      :param indicator_config: A mapping ``{indicator_tag: value}`` providing a value for
          every indicator of this space. Extra keys are ignored.
      :return: True if the subspace is active.
      :raise ValueError: If ``indicator_config`` omits any indicator.



   .. py:method:: node_for_subspace(tag: str) -> list[HierarchyNode]

      Return the :class:`HierarchyNode` objects that own the given subspace tag.

      :param tag: A non-indicator subspace tag.
      :return: List of nodes containing this tag.



   .. py:method:: _require_complete_config(indicator_config: Mapping[str, int]) -> None

      Reject a partial configuration: ``indicator_config`` must provide a value for every
      indicator of this space (extra keys are ignored). Catches forgotten or mistyped
      indicator keys, which would otherwise be silently treated as unsatisfied.



   .. py:method:: product(other: HierarchicalSearchSpace) -> HierarchicalSearchSpace

      Return a new :class:`HierarchicalSearchSpace` that is the combination of this space and
      ``other``. Tags in the two spaces must be disjoint. The (tag-based) hierarchy nodes,
      conditional constraints and logical propositions reference subspaces and indicators by
      tag, so they compose across the disjoint-tag product unchanged and are simply
      concatenated; the combined space re-resolves the nodes against the merged column layout.
      Global (positional) constraints are remapped via :func:`_embed_constraint`: ``self``'s
      keep columns ``[0, D_self)`` and ``other``'s shift to ``[D_self, D_self + D_other)``.
      The combined space takes the tighter (minimum) of the two operands' constraint
      tolerances.

      :param other: Another :class:`HierarchicalSearchSpace`.
      :return: The combined hierarchical space.
      :raises ValueError: If the two spaces share any tags.



   .. py:method:: _node_is_active(node: HierarchyNode, indicator_config: Mapping[str, int]) -> bool

      Check whether a node's ``activity_condition_tags`` are all satisfied by
      ``indicator_config`` (both keyed by indicator tag). Uses integer equality so that
      K-ary categorical indicators are compared exactly rather than via Boolean truthiness.
      Assumes a complete config (see :meth:`_require_complete_config`, enforced by the public
      callers).



.. py:class:: TaggedMultiSearchSpace(spaces: Sequence[SearchSpace], tags: Optional[Sequence[str]] = None)

   Bases: :py:obj:`CollectionSearchSpace`


   A :class:`SearchSpace` made up of a collection of multiple :class:`SearchSpace` subspaces,
   each with a unique tag. All subspaces must have the same dimensionality.

   Each subspace is treated as an independent space and not combined in any way. This class
   provides functionality for accessing all the subspaces at once by using the usual search space
   methods, as well as for accessing individual subspaces.

   When accessing all subspaces at once from this class (e.g. `lower()`, `upper()`, `sample()`),
   the returned tensors have an extra dimension corresponding to the subspaces.

   This class can be useful to represent a collection of search spaces that do not interact with
   each other. For example, it is used to implement batch trust region rules in the
   :class:`BatchTrustRegion` class.

   Build a :class:`TaggedMultiSearchSpace` from a list ``spaces`` of other spaces. If
   ``tags`` are provided then they form the identifiers of the subspaces, otherwise the
   subspaces are labelled numerically.

   :param spaces: A sequence of :class:`SearchSpace` objects representing the space's subspaces
   :param tags: An optional list of tags giving the unique identifiers of
       the space's subspaces.
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``spaces`` has a different
       length to ``tags`` when ``tags`` is provided or if ``tags`` contains duplicates.
   :raise ValueError (or tf.errors.InvalidArgumentError): If ``spaces`` has a different
       dimension to each other.


   .. py:property:: lower
      :type: trieste.types.TensorType


      Returns the stacked lower bounds of all the subspaces.

      :return: The lower bounds of shape [V, D], where V is the number of subspaces and D is
          the dimensionality of each subspace.



   .. py:property:: upper
      :type: trieste.types.TensorType


      Returns the stacked upper bounds of all the subspaces.

      :return: The upper bounds of shape [V, D], where V is the number of subspaces and D is
          the dimensionality of each subspace.



   .. py:property:: dimension
      :type: trieste.types.TensorType


      The number of inputs in this search space.



   .. py:method:: sample(num_samples: int, seed: Optional[int] = None) -> trieste.types.TensorType

      Sample randomly from the space by sampling from each subspace
      and returning the resulting samples stacked along the second axis in the same order as
      specified when initializing the space.

      :param num_samples: The number of points to sample from each subspace.
      :param seed: Optional tf.random seed.
      :return: ``num_samples`` i.i.d. random points, sampled uniformly,
          from each search subspace with shape '[num_samples, V, D]' , where V is the number of
          subspaces and D is the search space dimension.



   .. py:method:: _contains(value: trieste.types.TensorType) -> trieste.types.TensorType

      Return `True` if ``value`` is a member of this search space, else `False`. A point
      is a member if it is a member of any of the subspaces.

      :param value: A point or points to check for membership of this :class:`SearchSpace`.
      :return: A boolean array showing membership for each point in value.



   .. py:method:: product(other: TaggedMultiSearchSpace) -> TaggedMultiSearchSpace

      Return a bigger collection of two :class:`TaggedMultiSearchSpace`\ s, regenerating the
      tags.

      :param other: A search space of the same type as this search space.
      :return: The product of this search space with the ``other``.



   .. py:method:: discretize(num_samples: int) -> DiscreteSearchSpace

      :param num_samples: The number of points in the :class:`DiscreteSearchSpace`.
      :return: A discrete search space consisting of ``num_samples`` points sampled uniformly from
          this search space.
      :raise NotImplementedError: If this :class:`SearchSpace` has constraints.



